syntax = "proto3";

option csharp_namespace = "Drimstarter.AccountService.Client";

package accounts;

service Accounts {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply);
}

message CreateAccountRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateAccountReply {
  AccountDto account = 1;
}

message AccountDto {
  string id = 1;
  string name = 2;
  string email = 3;
}
